objects/BlueBerryEventRegistration__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlueBerryEvent__c</fullName>
        <label>Event Name</label>
        <referenceTo>BlueBerryEvent__c</referenceTo>
        <relationshipLabel>BlueBerryEventRegistrations</relationshipLabel>
        <relationshipName>BlueBerryEventRegistrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BlueBerrySession__c</fullName>
        <label>Session Name</label>
        <referenceTo>BlueBerrySession__c</referenceTo>
        <relationshipLabel>Registered List</relationshipLabel>
        <relationshipName>BlueBerryEventRegistrations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cancel_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Event Attendee List</relationshipLabel>
        <relationshipName>BlueBerryEventRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>checkifunique__c</fullName>
        <label>checkifunique</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>BlueBerryEventRegistration</label>
    <nameField>
        <displayFormat>REG#{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BlueBerryEventRegistrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>